# kernel

./: Cargo.toml  README.md  Xargo.toml  arch.zig  build-config.rs  build.rs  cpu.zig  i386-tupai.json  kearly.zig  kmain.zig  makefile  x86_64-tupai.json
.cargo/: config
arch/armv7/: link.ld
arch/i386/: link.ld
arch/x86/: cga.zig  cpu.zig  mmap.zig  vga.zig
arch/x86/i386/: link.ld  multiboot.s  start.s
arch/x86_64/: link.ld
dev/: tty.zig
old/: kearly.zig  kmain.zig
old/arch/x86/: vga.zig
old/arch/x86/i386/: early.zig  gdt.zig  multiboot.s
old/util/: char.zig  log.zig
src/: lib.rs  log.rs  main.rs  shell.rs
src/arch/: mod.rs
src/arch/arm/: cpu.rs  exception.rs  gpio.rs  mailbox.rs  mem.rs  mmio.rs  mod.rs
src/arch/arm/armv7/: exception.rs  exception.s  gpio.rs  isr.rs  mem.rs  mod.rs  paging.rs  uart.rs
src/arch/arm/armv7/boot/: start.s
src/arch/arm/boards/: bcm2836.rs  mod.rs
src/arch/chipset/: mod.rs
src/arch/chipset/ibmpc/: kbd.rs  mod.rs  pic.rs  pit.rs  regions.rs  spurious.rs
src/arch/chipset/pc/: mod.rs  pic.rs  pit.rs  spurious.rs
src/arch/cpu/: mod.rs
src/arch/cpu/amd64/: gdt.rs  irq.rs  isr.s  mem.rs  mod.rs
src/arch/cpu/amd64/boot/: high.s  mod.rs  paging64.s  start.s  vga.s
src/arch/family/: mod.rs
src/arch/family/x86/: exception.rs  mod.rs  port.rs
src/arch/family/x86/boot/: check.s  vga.s
src/arch/hal/: i386.rs  mod.rs  x64.rs
src/arch/isa/: mod.rs
src/arch/isa/a32/: exception.s  mem.rs  mod.rs
src/arch/isa/a32/boot/: mod.rs  start.s
src/arch/isa/amd64/: idt.rs  isr.rs  isr.s  mem.rs  mod.rs
src/arch/isa/amd64/boot/: check.s
src/arch/isa/ia32/: gdt.rs  isr.rs  isr.s  mem.rs  mod.rs
src/arch/isa/ia32/boot/: high.s  mod.rs  paging.s  start.s  vga.s
src/arch/tags/: mod.rs  multiboot.rs
src/arch/x86/: check.s  exception.rs  mem.rs  mod.rs  paging.s  pic.rs  pit.rs  port.rs  spurious.rs  vga.s
src/arch/x86/boot/: multiboot.s  paging.s  vga.s
src/arch/x86/i386/: check.s  exception.s  gdt.rs  idt.rs  isr.rs  mem.rs  mod.rs  start.s  vga.s
src/arch/x86/i386/boot/: high.s  paging.s  start.s
src/arch/x86/x86_64/: exception.s  gdt.rs  idt.rs  isr.rs  mem.rs  mod.rs  paging.rs
src/arch/x86/x86_64/boot/: high.s  paging.s  paging64.s  start.s  vga.s
src/arch_/bootcfg/: mod.rs  multiboot.rs
src/arch_/chipset/ibmpc/: kbd.rs  mod.rs  pic.rs  pit.rs  regions.rs  spurious.rs
src/arch_/cpu/: mod.rs
src/arch_/cpu/amd64/: paging.rs
src/arch_/cpu/amd64/boot/: high.s
src/arch_/family/: mod.rs
src/arch_/family/x86/boot/: mod.rs
src/chipset/: bcm2836.rs  ibmpc.rs  mod.rs
src/cpu/: mod.rs
src/driver/: bcm2835.rs  com.rs  console.rs  mod.rs  serial.rs  vga.rs
src/driver/serial/: com.rs  mod.rs  uart.rs
src/driver/tags/: atags.rs  mod.rs  multiboot.rs
src/driver/video/: bcm2836.rs  bcm283x.rs  mod.rs  vga.rs
src/env/: env.rs  mod.rs
src/family/: arm.rs  mod.rs  x86.rs
src/family/x86/: exception.rs  mod.rs
src/fs/: handle.rs  mod.rs  ramfs.rs
src/fs_/: mod.rs  ramfs.rs
src/hal/: armv7.rs  armv8.rs  i386.rs  mod.rs  x64.rs
src/isa/: a32.rs  a64.rs  amd64.rs  ia32.rs  mod.rs
src/isa/amd64/: cpu.rs  idt.rs  mod.rs
src/isa/amd64/boot/: high.s
src/llapi/: i386.rs  mod.rs  rpi2.rs  x64.rs
src/mem/: heap.rs  mod.rs  pfa.rs  wma.rs
src/process/: handle.rs  mod.rs  process.rs
src/res/: mod.rs
src/thread/: handle.rs  mod.rs  preempt.rs  stack.rs  thread.rs
src/util/: bootcfg.rs  contract.rs  elf.rs  io.rs  irqlock.rs  irqqueue.rs  logging.rs  math.rs  mem.rs  mod.rs  path.rs  tar.rs  uid.rs
src/vdev/: mod.rs  tty.rs
src/vfs/: fs.rs  mod.rs  node.rs
targets/i386/: i386-tupai.json  link.ld
targets/rpi2/: link.ld  rpi2-tupai.json
targets/x64/: x64-tupai.json
tgt/i386/: i386-tupai.json
tgt/rpi2/: rpi2-tupai.json
util/: char.zig  panic.zig
