[package]
name = "tupai"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
# Target base
arch_base_x86 = []
arch_base_arm = []

# Target ISA
arch_isa_i386 = []
arch_isa_x86_64 = []
arch_isa_armv7 = []
arch_isa_armv8 = []

# Board
board_model_bcm2835 = []
board_model_bcm2836 = []
board_model_bcm2837 = []

# Driver features
# TTY out drivers
	driver_ttyout_com = []
	driver_ttyout_vgatextmode = []
	driver_ttyout_uart = []
	driver_ttyout_fbtextmode = []
# TTY in drivers
	driver_ttyin_com = []
	driver_ttyin_kbd = []
	driver_ttyin_uart = []
# Tag driver
	driver_tags_multiboot = []
	driver_tags_atags = []
# Video drivers
	driver_video_vga = []
	driver_video_bcm283x = []
# Serial drivers
	driver_serial_com = []
	driver_serial_uart = []

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.0"
volatile = "0.1.0"
spin = "0.4.5"
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins" }

[dependencies.lazy_static]
version = "1.0.0"
features = ["spin_no_std"]
