# file : Cargo.toml
#
# Copyright (C) 2018  Joshua Barretto <joshua.s.barretto@gmail.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[package]
name = "tupai"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
build = "build.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
# Arch-dependent features
	# HAL
	arch_hal_amd64   = ["arch_family_x86"]
	arch_hal_i386    = ["arch_family_x86"]
	arch_hal_a32     = ["arch_family_arm"]
	arch_hal_aarch64 = ["arch_family_arm"]

	# Shared HAL-dependent features
	arch_family_x86 = []
	arch_family_arm = []

	# More specific HAL configuration
	arch_chipset_ibmpc   = ["arch_family_x86"]
	arch_chipset_bcm2836 = ["arch_family_arm"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.0"
volatile = "0.1.0"
spin = "0.4.5"
cstr_core = "0.1.0"
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins" }
bitflags = "1.0.1"

[dependencies.lazy_static]
version = "1.0.0"
features = ["spin_no_std"]
